--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,67 @@
-# Compiled class file
+# Environment files
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# OS files
+.DS_Store
+Thumbs.db
+*.tmp
+*.temp
+
+# Java/Maven
+target/
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+.mvn/wrapper/maven-wrapper.jar
+.classpath
+.project
+.settings/
+.factorypath
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Node.js/NPM
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+build/
+dist/
+coverage/
+
+# Docker
+.dockerignore
+
+# Logs
+logs/
+*.log
+
+# Security - Never commit these
+*.pem
+*.key
+*.p12
+*.jks
+keys/
+secrets/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+tmp/
+temp/
+.cache/
+
+# Build artifacts
+*.so
+*.dylib
+*.dll
